# inventreeean

./: LICENSE  Readme.md  pyproject.toml
inventree_datanorm_import/: datanorm_barcode_plugin.py  part_factory.py  supplier_websites.py
inventree_datanorm_import/tests/: test_datanorm_barcode_plugin.py  test_part_factory.py  test_supplier_websites.py
inventree_datanorm_plugin/: __init__.py  datanorm_barcode_plugin.py  part_factory.py
inventree_datanorm_plugin/tests/: test_datanorm_barcode_plugin.py  test_part_factory.py  test_supplier_websites.py
